Install build dependencies

--- a/.github/workflows/build-focal.yml
+++ b/.github/workflows/build-focal.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+    - name: Install Dependencies
+      run: |
+        sudo apt update
+        sudo apt-get install ninja-build    
+    
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
 
